Ensure subcomponents line up on small viewports

--- a/source/components/banner.scss
+++ b/source/components/banner.scss
@@ -19,6 +19,7 @@
 
   &-inside {
     display: flex;
+    flex-direction: column;
     align-items: flex-start;
     max-width: $container-max-width;
     padding-right: $space-large-d;
@@ -27,6 +28,7 @@
     margin-left: auto;
 
     @include set-breakpoint(tablet) {
+      flex-direction: row;
       padding-right: $space-large-b;
       padding-left: $space-large-b;
     }
@@ -40,20 +42,26 @@
 
   &-message {
     margin-top: $space-small-e;
-    margin-bottom: $space-small-e;
+    margin-bottom: $space-small-a;
 
-    &:not(:first-child) {
-      margin-left: $space-regular;
-    }
+    @include set-breakpoint(tablet) {
+      margin-bottom: $space-small-e;
 
-    &:not(:last-child) {
-      margin-right: $space-regular;
+      &:not(:first-child) {
+        margin-left: $space-regular;
+      }
+
+      &:not(:last-child) {
+        margin-right: $space-regular;
+      }
     }
   }
 
   &-button {
-    margin-top: -$space-small-d;
-    margin-bottom: -$space-small-d;
+    @include set-breakpoint(tablet) {
+      margin-top: -$space-small-d;
+      margin-bottom: -$space-small-d;
+    }
   }
 }
 
